AC_INIT(src/common/WebService/iFolder.cs)
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(config.h)
if test -d m4; then
echo "adding m4"
AC_CONFIG_MACRO_DIR([m4])
fi
AC_PROG_CXX(am__fastdepCXX)
m4_pattern_allow(PKG_CONFIG)

AM_INIT_AUTOMAKE(ifolder3, 3.9)
# Check to see if the BUILDNUM is set by global build
#if test "$BUILDNUM" = ""; then
#	let "BUILDNUM=`date +%G%j`-2000000"
#fi
ASSEMBLY_VERSION=2
BUILD_NUMBER=0
VERSION=$VERSION.$ASSEMBLY_VERSION.$BUILD_NUMBER
SIMIASVER=1.5.$BUILDNUM.1
AM_MAINTAINER_MODE
AC_PROG_CC
#
# Check for a 32 / 64
#HACK ALERT : for libflaim 64bit builds
case $host_cpu in
    x86_64|amd64|s390x|ppc64|powerpc64)
        LIB64='lib64'
    ;;
    *)
        LIB64='lib'
    ;;
esac

AC_SUBST(LIB64)
PACKAGE=ifolder3
AC_SUBST(PACKAGE)

#
# Check for a valid operating system and C# compiler
#
case $host_os in
    linux*)
        IFOLDER_OS='linux'
        AC_CHECK_PROG(CSC, mcs, mcs)
        test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])
        PKG_CONFIG_DIR=${LIB64} 

        AC_CHECK_PROG(WSDL, wsdl1, wsdl1,wsdl)
    ;;   
    darwin*)
        IFOLDER_OS='darwin'
        AC_CHECK_PROG(CSC, gmcs, gmcs)
        test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: gmcs not found in \$PATH])
        PKG_CONFIG_DIR='lib'
    ;;
    cygwin*)
        IFOLDER_OS='windows'
        AC_CHECK_PROG(CSC, csc, csc)
        test -z "$CSC" && AC_CHECK_PROG(CSC, mcs, mcs)
        test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: neither csc nor mcs found in \$PATH])
        PKG_CONFIG_DIR='.'
    ;;
    *)
        AC_MSG_ERROR([Unknown host_os: $host_os])
    ;;
esac
AC_SUBST(BUILDNUM)
AC_SUBST(IFOLDER_OS)
AC_SUBST(SIMIASVER)
AM_CONDITIONAL(LINUX, test "$IFOLDER_OS" = "linux")
AM_CONDITIONAL(WINDOWS, test "$IFOLDER_OS" = "windows")
AM_CONDITIONAL(DARWIN, test "$IFOLDER_OS" = "darwin")
if test "$host_os" = "darwin"; then
	AM_CONDITIONAL(MONO, test "$CSC" = "gmcs")
else
	AM_CONDITIONAL(MONO, test "$CSC" = "mcs")
fi

AM_CONDITIONAL(DOTNET, test "$CSC" = "csc")


#
# We add $prefix to PKG_CONFIG_PATH so pkg-config will find any other
# packages 'make install'-ed to the same prefix.
#
# The default value of $prefix is not set until later in the script.
# We set the default here, if needed.
#
test "x$prefix" = xNONE && prefix=$ac_default_prefix
test "x$exec_prefix" = xNONE && exec_prefix="${prefix}"



if test -z "$PKG_CONFIG_PATH"; then
    export PKG_CONFIG_PATH="$prefix/$PKG_CONFIG_DIR/pkgconfig"
else
    export PKG_CONFIG_PATH="$prefix/$PKG_CONFIG_DIR/pkgconfig:$PKG_CONFIG_PATH"
fi
echo PKG_CONFIG_PATH=$PKG_CONFIG_PATH
AC_SUBST(PKG_CONFIG_PATH)

helpdir=\${prefix}/help
AC_SUBST(helpdir)

#
# Configure C# compiler settings
#
case $CSC in
    #
    # Mono-specific configuration
    #
    gmcs)
        CSC_EXEFLAG=/target:exe
        CSC_LIBFLAG=/target:library
        CSC_WINEXEFLAG=/target:winexe
        CSCFLAGS='/d:MONO /warn:4 /d:TRACE /d:MONOTRACE'
        CSCFLAGS_DEBUG="/debug+ /d:DEBUG"
        CSCFLAGS_OPTIMIZE="/optimize+"
        MONO=mono
        MONO_DEBUG='mono --debug'
        MONO_PATH="\$(subst \$(SPACE),:,\$(addprefix \$(SRCDIR)\$(SEP),iFolder)):`pkg-config --variable=libdir simias`"
        SYSTEM_XML='System.Xml.dll'
    ;;
    mcs)
        CSC_EXEFLAG=/target:exe
        CSC_LIBFLAG=/target:library
        CSC_WINEXEFLAG=/target:winexe
        CSCFLAGS='/d:MONO /warn:4 /d:TRACE'
        CSCFLAGS_DEBUG="/debug+ /d:DEBUG"
        CSCFLAGS_OPTIMIZE="/optimize+"
        MONO=mono
        MONO_DEBUG='mono --debug'
        MONO_PATH="\$(subst \$(SPACE),:,\$(addprefix \$(SRCDIR)\$(SEP),iFolder)):`pkg-config --variable=libdir simias`"
        SYSTEM_XML='System.Xml.dll'
    ;;
    #
    # .NET-specific configuration
    #
    csc)
        CSC_EXEFLAG=/target:exe
        CSC_LIBFLAG=/target:library
        CSC_WINEXEFLAG=/target:winexe
        CSCFLAGS='/d:DOTNET /warn:4 /d:TRACE /nologo'
        CSCFLAGS_DEBUG="/debug+ /d:DEBUG"
        CSCFLAGS_OPTIMIZE="/optimize+"
        MONO=
        MONO_DEBUG=
        MONO_PATH=
        SYSTEM_XML='System.XML.dll'
    ;;
esac
AC_SUBST(CSC)
AC_SUBST(CSC_EXEFLAG)
AC_SUBST(CSC_LIBFLAG)
AC_SUBST(CSC_WINEXEFLAG)
AC_SUBST(CSCFLAGS)
AC_SUBST(MONO)
AC_SUBST(MONO_PATH)
AC_SUBST(SYSTEM_XML)

SRCDIR='$(top_srcdir)/src'
TOOLDIR='$(top_srcdir)/dependencies/external/tools'
DOCDIR="$SRCDIR/doc"

AC_SUBST(SRCDIR)
AC_SUBST(TOOLDIR)
AC_SUBST(DOCDIR)

EMPTY=
SPACE='$(EMPTY) $(EMPTY)'

AC_SUBST(EMPTY)
AC_SUBST(SPACE)

COMMON_CLEAN_FILES='*.dbg *.exe *.dll *.pdb */*.pdb *.doc.xml */*.doc.xml *.test.xml */*.test.xml'
COMMON_DISTCLEAN_FILES='*.suo */*.suo *.csproj.user */*.csproj.user bin obj */bin */obj'
COMMON_MAINTAINER_CLEAN_FILES='Makefile.in'
AC_SUBST(COMMON_CLEAN_FILES)
AC_SUBST(COMMON_DISTCLEAN_FILES)
AC_SUBST(COMMON_MAINTAINER_CLEAN_FILES)

#
# Set pkg-config variables
#
GTK_SHARP2_MINIMUM_VERSION=1.9.5
GNOME_SHARP2_MINIMUM_VERSION=1.9.5
GCONF_SHARP2_MINIMUM_VERSION=1.9.0
GTK20_MINIMUM_VERSION=2.6.0
ATK_MINIMUM_VERSION=1.2.4
DBUS_SHARP_MINIMUM_VERSION=0.35.0
AC_SUBST(GTK_SHARP2_MINIMUM_VERSION)
AC_SUBST(GNOME_SHARP2_MINIMUM_VERSION)
AC_SUBST(GCONF_SHARP2_MINIMUM_VERSION)
AC_SUBST(GTK20_MINIMUM_VERSION)
AC_SUBST(ATK_MINIMUM_VERSION)
AC_SUBST(DBUS_SHARP_MINIMUM_VERSION)

#
# Set platform-specific variables
#
case $IFOLDER_OS in
    #
    # MAC OS X configuration
    #
    darwin)
        #
        # Set variables
        #
        CSCFLAGS="/d:DARWIN $CSCFLAGS"
        EMPTY=
        EXE_EXT=''
		GCONF_SCHEMA_CONFIG_SOURCE=''
		GCONF_SCHEMA_FILE_DIR=''
        ICON_EXT='.ico'
        ICON_FLAG='/resource:'
        INSTALL_EXE_OPTS='-m 644'
        NUNIT="mono nunit-console.exe"
        NUNIT_LIBPATH="$TOOLDIR/NUnit/mono/bin"
        NUNIT_FLAGS='/nologo'
        NUNITFLAGS_DEBUG=''
        NUNITFLAGS_OPTIMIZE=''
        OBJ_EXT='.o'
        REPORT_DIR='$(DESTDIR)$(bindir)'
        REPORT_EXE='mono $TOOLDIR/Report/Report.exe'
        SEP='/'
        SHARED_LIB_EXT='.dylib'
        SHARED_LIB_FLAG='-shared'
        STORELIB_PATH="../../dependencies/external/sqlite/darwin"
        STORELIB="sqlite"
        SYSTEM_XML='System.Xml.dll'
	case $host_cpu in
		i686*)
			GSOAP_PATH="$TOOLDIR/gsoap/macosx-x86-2.7"
		;;
		*)
			GSOAP_PATH="$TOOLDIR/gsoap/macosx-2.7"
		;;
	esac

        #
        # Set pkg-config variables
        #
        PKG_CONFIG_REQUIRES="simias >= 1.0"
		PKG_CONFIG_LIBS="/r:Novell.iFolder.dll"
		PKG_CONFIG_CONFLICTS=""
    	libexecdir='${exec_prefix}/${LIB64}/simias'
    ;;
    #
    # Linux-specific configuration
    #
    linux)
		#
		# Find gconftool-2
		#
		AC_PATH_PROG(GCONFTOOL, gconftool-2)
		if test x"$GCONFTOOL" = x; then
			AC_MSG_ERROR([gconftool-2 executable not found in your path - should be installed with GConf])
		fi

        #
        # Set variables
        #
        CSCFLAGS="/d:LINUX $CSCFLAGS"
        EMPTY=
        EXE_EXT=''
		GCONF_SCHEMA_CONFIG_SOURCE=`gconftool-2 --get-default-source`
		GCONF_SCHEMA_FILE_DIR='$(sysconfdir)/gconf/schemas'
        ICON_EXT='.ico'
        ICON_FLAG='/resource:'
        INSTALL_EXE_OPTS='--mode=644'
        NUNIT="mono nunit-console.exe"
        NUNIT_LIBPATH="$TOOLDIR/NUnit/mono/bin"
        NUNIT_FLAGS='/nologo'
        NUNITFLAGS_DEBUG=''
        NUNITFLAGS_OPTIMIZE=''
        OBJ_EXT='.o'
        REPORT_DIR='$(DESTDIR)$(bindir)'
        REPORT_EXE='mono $TOOLDIR/Report/Report.exe'
        SEP='/'
        SHARED_LIB_EXT='.so'
        SHARED_LIB_FLAG='-shared'
        STORELIB_PATH="../../dependencies/external/sqlite/linux"
        STORELIB="libsqlite.so"
        SYSTEM_XML='System.Xml.dll'
		GSOAP_PATH="$TOOLDIR/gsoap/linux-2.7"
        #
        # Set pkg-config variables
        #
        PKG_CONFIG_REQUIRES="simias >= 1.0 gtk-sharp-2.0 >= $GTK_SHARP2_MINIMUM_VERSION"
		PKG_CONFIG_LIBS="/r:Novell.iFolder.dll /r:Novell.iFolder.UI.gtk.dll /r:TrayIcon.dll"
		PKG_CONFIG_CONFLICTS=""

		dnl Intl
		#ALL_LINGUAS="pt_BR"
		#ALL_LINGUAS="pt_BR fr it de es ru ja"
		#AM_GNU_GETTEXT_VERSION(0.10.40)
		#AM_GNU_GETTEXT(external)
		ALL_LINGUAS="cs de en es fi fr it ja hu pl pt pt_BR ru sk zh_CN zh_TW"
		GETTEXT_PACKAGE=${PACKAGE}
		AC_SUBST(GETTEXT_PACKAGE)
		AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [gettext package name])
		AM_GLIB_GNU_GETTEXT


    	libexecdir='${exec_prefix}/${LIB64}/simias'
	libdir='${exec_prefix}/${LIB64}'
    ;;
    #
    # Windows-specific configuration
    #
    windows)
        #
        # Check for valid compilers
        #
        AC_CHECK_PROG(CC, cl, cl)
        test -z "$CC" && AC_MSG_ERROR([no acceptable C compiler found in \$PATH])
        AC_CHECK_PROG(CXX, cl, cl)
        test -z "$CXX" && AC_MSG_ERROR([no acceptable C++ compiler found in \$PATH])
        AC_CHECK_PROG(LD, link, link)
        test -z "$LD" && AC_MSG_ERROR([no acceptable linker found in \$PATH])
        #
        # Set variables
        #
        CC='cl -c'
        CXX='cl -c'
        CDEF='-D'
        CFLAGS="-nologo -W3 -DWIN32 -D_WINDOWS -DWINDOWS -DPACKAGE=\$(PACKAGE) -DVERSION=\$(VERSION)";
        CFLAGS_DEBUG="-MDd -Od -Zi -RTC1 -DDEBUG -D_DEBUG"
        CFLAGS_OPTIMIZE="-MD -O2 -DNDEBUG"
        CINC='-I'
        COUT='-Fo'
        CSCFLAGS="/d:WINDOWS $CSCFLAGS"
        CXXFLAGS="-nologo -GX -W3 -DWIN32 -D_WINDOWS -DWINDOWS -DPACKAGE=\$(PACKAGE) -DVERSION=\$(VERSION)";
        CXXFLAGS_DEBUG="-MDd -Od -Zi -RTC1 -DDEBUG -D_DEBUG"
        CXXFLAGS_OPTIMIZE="-MD -O2 -DNDEBUG"
        DEF='-def:'
        EMPTY=
        EXE_EXT='.exe'
		GCONF_SCHEMA_CONFIG_SOURCE=''
		GCONF_SCHEMA_FILE_DIR=''
        ICON_EXT='.ico'
        ICON_FLAG='/win32icon:'
        INSTALL_EXE_OPTS=''
        LDFLAGS='-nologo -machine:X86'
        LDFLAGS_DEBUG="-DEBUG"
        LDINC='-libpath:'
        LDOUT='-out:'
        LIB_EXT='.lib'
        LIB_PRE=''
        LIBFLAG=''
        LIBS='kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib rpcrt4.lib ws2_32.lib imagehlp.lib'
        NUNIT="nunit-console.exe"
        NUNIT_LIBPATH="$TOOLDIR/NUnit/net/bin"
        NUNIT_FLAGS='/nologo'
        NUNITFLAGS_DEBUG=''
        NUNITFLAGS_OPTIMIZE=''
        OBJ_EXT='.obj'
        RC='rc'
        RC_FLAGS='-r'
        REPORT_DIR='$(shell cygpath --windows $(DESTDIR)$(bindir) | sed ''s,\\\\,/,g'')'
        REPORT_EXE='$TOOLDIR/Report/Report.exe'
        RES_EXT='.res'
		RESG='resgen'
        SEP='$(EMPTY)\\$(EMPTY)'
        SHARED_LIB_EXT='.dll'
        SHARED_LIB_FLAG='-dll'
        STORELIB="sqlite.dll"
        STORELIB_PATH="../../dependencies/external/sqlite/w32"
        SYSTEM_XML='System.XML.dll'
        TLBX='tlbexp'
        TYPE_LIB_EXT='.tlb'
		GSOAP_PATH="$TOOLDIR/gsoap/WIN32-2.7"
        #
        # Set pkg-config variables
        #
        PKG_CONFIG_REQUIRES="simias >= 1.0"
		PKG_CONFIG_LIBS="/r:Novell.iFolder.dll /r:TrayIcon.dll"
		PKG_CONFIG_CONFLICTS=""
        #
        # Override Linux-like directory structure
        #
    	bindir='${exec_prefix}'
    	sbindir='${exec_prefix}'
    	libexecdir='${exec_prefix}'
    	libdir='${exec_prefix}'
    ;;
esac
AC_SUBST(CDEF)
AC_SUBST(CINC)
AC_SUBST(COUT)
AC_SUBST(CXX)
AC_SUBST(CXXFLAGS)
AC_SUBST(DEF)
AC_SUBST(DOCDIR)
AC_SUBST(GCONF_SCHEMA_CONFIG_SOURCE)
AC_SUBST(GCONF_SCHEMA_FILE_DIR)
AC_SUBST(ICON_EXT)
AC_SUBST(ICON_FLAG)
AC_SUBST(INSTALL_EXE_OPTS)
AC_SUBST(LDFLAGS)
AC_SUBST(LDINC)
AC_SUBST(LDOUT)
AC_SUBST(LIBS)
AC_SUBST(NUNIT)
AC_SUBST(NUNIT_FLAGS)
AC_SUBST(NUNIT_LIBPATH)
AC_SUBST(OBJ_EXT)
AC_SUBST(RC)
AC_SUBST(RCFLAGS)
AC_SUBST(REPORT_DIR)
AC_SUBST(REPORT_EXE)
AC_SUBST(RES_EXT)
AC_SUBST(RESG)
AC_SUBST(SEP)
AC_SUBST(SHARED_LIB_FLAG)
AC_SUBST(SYSTEM_XML)
AC_SUBST(TLBX)
AC_SUBST(webdir)
AC_SUBST(webbindir)
AC_SUBST(GSOAP_PATH)

#
# We have our own "standard" directories for web services.
#
webdir='${libexecdir}/web'
webbindir='${webdir}/bin'
# setup 64bit casa path in ifolder script
case `arch` in
    x86_64|amd64|s390x|ppc64|powerpc64)
	casadir=/usr/lib64
	;;
	*)
	casadir=/usr/lib
	;;
esac
AC_SUBST(webdir)
AC_SUBST(webbindir)
AC_SUBST(casadir)


#
# Set pkg-config variables
#
AC_SUBST(PKG_CONFIG_REQUIRES)
AC_SUBST(PKG_CONFIG_LIBS)
AC_SUBST(PKG_CONFIG_CONFLICTS)

#
# Run standard macros
#
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_HEADER_STDC
AM_PROG_LIBTOOL

#
# Handle --with-ndoc-path
#
AC_ARG_WITH(ndoc-path, [
  --with-ndoc-path=PATH        path to dir that contains NDocConsole.exe [[NONE]]],
    [ NDOC_PATH="$withval" ],
    [ NDOC_PATH=NONE ]
    )
if test "$NDOC_PATH" = "NONE"; then
    NDOC_PATH=''
else
    if test `basename "$NDOC_PATH"` = "NDocConsole.exe"; then
        NDOC_PATH=`dirname "$NDOC_PATH"`
    fi
    test -d "$NDOC_PATH" || AC_MSG_ERROR([$NDOC_PATH does not exist])
    NDOC_PATH=`cd "$NDOC_PATH" && pwd`
fi
if test -n "$NDOC_PATH"; then
    if test -e "$NDOC_PATH/NDocConsole.exe"; then
        NDOC_CMD="$NDOC_PATH/NDocConsole.exe"
    fi
    test -e "$NDOC_CMD" || AC_MSG_ERROR([NDocConsole.exe not found in $NDOC_PATH])
fi
echo NDOC_CMD=$NDOC_CMD
AC_SUBST(NDOC_CMD)
AM_CONDITIONAL(NDOC, test -n "$NDOC_CMD")
AM_CONDITIONAL(MAKE_DOC_FILE, test -n "$NDOC_CMD")

#
# Handle --enable-debug
#
AC_ARG_ENABLE(debug, [
  --enable-debug          configure the Makefiles to build in DEBUG mode],
    [case "${enableval}" in
        yes) enable_debug=true ;;
        no)  enable_debug=false ;;
        *) AC_MSG_ERROR(bad value ${enableval} for --enable-debug) ;;
    esac],[enable_debug=false])
AM_CONDITIONAL(DEBUG, test x$enable_debug = xtrue)
if test "$enable_debug" = "true"
then
  # Build debug version.
  CFLAGS="$CFLAGS_DEBUG $CFLAGS"
  CSCFLAGS="$CSCFLAGS_DEBUG $CSCFLAGS"
  CXXFLAGS="$CXXFLAGS_DEBUG $CXXFLAGS"
  DEVENV_CONFIGURATION=Debug
  MONO=$MONO_DEBUG
  NUNIT_FLAGS="$NUNITFLAGS_DEBUG $NUNIT_FLAGS"
else
  # Build optimized version.
  CFLAGS="$CFLAGS_OPTIMIZE $CFLAGS"
  CSCFLAGS="$CSCFLAGS_OPTIMIZE $CSCFLAGS"
  CXXFLAGS="$CXXFLAGS_OPTIMIZE $CXXFLAGS"
  DEVENV_CONFIGURATION=Release
  NUNIT_FLAGS="$NUNITFLAGS_OPTIMIZE $NUNIT_FLAGS"
fi
AC_SUBST(DEVENV_CONFIGURATION)

#
# Configure PKG_CONFIG
#
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)
if test "x$PKG_CONFIG" = "xno"; then
    AC_MSG_ERROR([You need to install pkg-config])
fi

#
# Check for required packages
#
PKG_CHECK_MODULES(SIMIAS, simias >= 1.0)
AC_SUBST(SIMIAS_LIBS)

PKG_CHECK_MODULES(SIMIAS_CLIENT, simias-client >= 1.0)
AC_SUBST(SIMIAS_CLIENT_LIBS)

PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= 1.0)
AC_SUBST(SIMIAS_CLIENT_C_CFLAGS)
AC_SUBST(SIMIAS_CLIENT_C_LIBS)

# if using csc, convert /lib paths using cygpath
case $CSC in
    csc)
        libdir_pkg=`pkg-config --variable=libdir simias`
        libdir_cyg=`cygpath --windows $libdir_pkg | sed 's,\\\\,/,g'`
        SIMIAS_LIBS=`echo $SIMIAS_LIBS | sed "s,$libdir_pkg,$libdir_cyg,g"`
        SIMIAS_CLIENT_LIBS=`echo $SIMIAS_CLIENT_LIBS | sed "s,$libdir_pkg,$libdir_cyg,g"`
    ;;
esac

case $IFOLDER_OS in
    linux)
#		AC_PROG_INTLTOOL

        PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp-2.0 >= $GTK_SHARP2_MINIMUM_VERSION)
	GTK_SHARP_PREFIX=`pkg-config --variable=prefix gtk-sharp-2.0`
        GTK_SHARP_VERSION=`pkg-config --modversion gtk-sharp-2.0`
        AC_SUBST(GTK_SHARP_PREFIX)
        AC_SUBST(GTK_SHARP_LIBS)
	
	PKG_CHECK_MODULES(LOG4NET, log4net >= 1.2.9)
        AC_SUBST(LOG4NET_PREFIX)
        AC_SUBST(LOG4NET_LIBS)


        PKG_CHECK_MODULES(GNOME_SHARP, gnome-sharp-2.0 >= $GNOME_SHARP2_MINIMUM_VERSION)
        AC_SUBST(GNOME_SHARP_PREFIX)
        AC_SUBST(GNOME_SHARP_LIBS)

        PKG_CHECK_MODULES(GTK20, gtk+-2.0 >= $GTK20_MINIMUM_VERSION)
        AC_SUBST(GTK20_CFLAGS)
        AC_SUBST(GTK20_LIBS)

        PKG_CHECK_MODULES(ATK, atk >= $ATK_MINIMUM_VERSION)
        AC_SUBST(ATK_CFLAGS)
        AC_SUBST(ATK_LIBS)
        
		PKG_CHECK_MODULES(GCONF_SHARP, gconf-sharp-2.0 > $GCONF_SHARP2_MINIMUM_VERSION)
		AC_SUBST(GCONF_SHARP_PREFIX)
		AC_SUBST(GCONF_SHARP_LIBS)
		
    ;;
    darwin)
        PKG_CHECK_MODULES(SIMIAS_CLIENT_C, simias-client-c >= 1.0)
        SIMIAS_CLIENT_C_INCLUDES=`pkg-config --variable=includedir simias-client-c`
        SIMIAS_CLIENT_C_LIBS=`pkg-config --variable=libdir simias-client-c`
        AC_SUBST(SIMIAS_CLIENT_C_INCLUDES)
        AC_SUBST(SIMIAS_CLIENT_C_LIBS)
    ;;
esac

#
# Configure files
#
AC_OUTPUT([
Makefile
help/Makefile
src/Makefile
src/common/iFolder/Makefile
src/common/iFolder/AssemblyInfo.cs
src/UI/Linux/LinuxClient/Makefile
src/UI/Linux/LinuxClient/KeyRecovery/Makefile
src/UI/Linux/LinuxClient/library/Makefile
src/UI/Linux/LinuxClient/application/Makefile
src/UI/Linux/LinuxClient/application/AssemblyInfo.cs
src/UI/Linux/LinuxClient/po/Makefile
src/UI/Linux/LinuxClient/po/POTFILES
src/UI/Windows/FormsTrayApp/Makefile
src/UI/Windows/FormsTrayApp/AssemblyInfo.cs
src/UI/Windows/iFolderShell/Makefile
src/UI/Windows/iFolderShell/AssemblyInfo.cs
src/UI/Linux/TrayIcon/Makefile
src/UI/Linux/TrayIcon/libtrayicon/Makefile
src/common/WebService/Makefile
src/common/WebService/AssemblyInfo.cs
src/common/libifolder/Makefile
src/UI/Mac/OSXClient/Makefile
src/UI/Mac/OSXClient/Info.plist
src/UI/Mac/OSXClient/src/config.h
src/UI/Mac/OSXClient/UninstalliFolder/Makefile
src/UI/Mac/OSXClient/UninstalliFolder/Info.plist
package/Makefile
package/windows/Makefile
package/darwin/Makefile
])

#test/iFolderComponent/Makefile
#test/iFolder/Makefile
#test/Makefile
# src/LinuxClient/po/Makefile
# src/LinuxClient/po/POTFILES
#src/LinuxClient/NetworkManager-sharp/Makefile
