AC_INIT

PACKAGE=nautilus-ifolder
VERSION=0.1.0

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)

NAUTILUS_MINIMUM_VERSION=2.5.0
EEL_MINIMUM_VERSION=2.5.0
GLIB_MINIMUM_VERSION=2.4.0
GTK_SHARP_MINIMUM_VERSION=1.0.4
GNOME_SHARP_MINIMUM_VERSION=1.0.4
SIMIAS_CLIENT_MINIMUM_VERSION=1.0
IFOLDER_MINIMUM_VERSION=3.0

AC_PROG_CC
AM_PROG_LIBTOOL

#GNOME_COMPILE_WARNINGS(maximum)

AC_CHECK_PROG(CSC, mcs, mcs)
test -z "$CSC" && AC_MSG_ERROR([no C Sharp compiler: mcs not found in \$PATH])

PKG_CONFIG_DIR='lib'

#
# We add $prefix to PKG_CONFIG_PATH so pkg-config will find any other
# packages 'make install'-ed to the same prefix.
#
# The default value of $prefix is not set until later in the script.
# We set the default here, if needed.
#
test "x$prefix" = xNONE && prefix=$ac_default_prefix
test "x$exec_prefix" = xNONE && exec_prefix="${prefix}"

#
# Installation directory options.
#
# These are normally left unexpanded so users can "make install exec_prefix=/foo".
# However, we want them expanded.
#
bindir="${exec_prefix}/bin"
sbindir="${exec_prefix}/sbin"
libexecdir="${exec_prefix}/libexec"
datadir="${prefix}/share"
sysconfdir="${prefix}/etc"
sharedstatedir="${prefix}/com"
localstatedir="${prefix}/var"
libdir="${exec_prefix}/lib"
includedir="${prefix}/include"
oldincludedir="/usr/include"
infodir="${prefix}/info"
mandir="${prefix}/man"
webdir="${exec_prefix}/web"
webbindir="${exec_prefix}/web/bin"

if test -z "$PKG_CONFIG_PATH"; then
    export PKG_CONFIG_PATH="$prefix/$PKG_CONFIG_DIR/pkgconfig"
else
    export PKG_CONFIG_PATH="$prefix/$PKG_CONFIG_DIR/pkgconfig:$PKG_CONFIG_PATH"
fi
echo PKG_CONFIG_PATH=$PKG_CONFIG_PATH
AC_SUBST(PKG_CONFIG_PATH)

dnl Check for pkgconfig first
AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, yes, no)

dnl Give error and exit if we don't have pkgconfig
if test "x$HAVE_PKGCONFIG" = "xno"; then
  AC_MSG_ERROR(you need to have pkgconfig installed !)
fi

PKG_CHECK_MODULES(NAUTILUS, libnautilus-extension >= $NAUTILUS_MINIMUM_VERSION eel-2.0 >= $EEL_MINIMUM_VERSION glib-2.0 >= $GLIB_MINIMUM_VERSION)

dnl make GNOME_CFLAGS and GNOME_LIBS available
AC_SUBST(NAUTILUS_CFLAGS)
AC_SUBST(NAUTILUS_LIBS)

PKG_CHECK_MODULES(GTK_SHARP, gtk-sharp >= $GTK_SHARP_MINIMUM_VERSION)
AC_SUBST(GTK_SHARP_LIBS)

PKG_CHECK_MODULES(GNOME_SHARP, gnome-sharp >= $GNOME_SHARP_MINIMUM_VERSION)
AC_SUBST(GNOME_SHARP_LIBS)

PKG_CHECK_MODULES(SIMIAS_CLIENT, simias-client >= $SIMIAS_CLIENT_MINIMUM_VERSION)
AC_SUBST(SIMIAS_CLIENT_LIBS)

PKG_CHECK_MODULES(SIMIAS_EVENT_CLIENT, simias-event-client >= $SIMIAS_CLIENT_MINIMUM_VERSION)
AC_SUBST(SIMIAS_EVENT_CLIENT_CFLAGS)
AC_SUBST(SIMIAS_EVENT_CLIENT_LIBS)

PKG_CHECK_MODULES(IFOLDER, ifolder3 >= $IFOLDER_MINIMUM_VERSION)
AC_SUBST(IFOLDER_LIBS)

gnome_root=$(pkg-config --variable=prefix libnautilus-extension)
AC_SUBST(gnome_root)
INSTALL_BIN_OPTS='--mode=755'
AC_SUBST(INSTALL_BIN_OPTS)

#
# Configure C# compiler settings
#
CSC_EXEFLAG=/target:exe
CSC_LIBFLAG=/target:library
CSC_WINEXEFLAG=/terget:winexe
CSCFLAGS='/d:MONO /warn:4 /d:TRACE'
CSCFLAGS_DEBUG="/debug+ /d:DEBUG"
CSCFLAGS_OPTIMIZE="/optimize+"
AC_SUBST(CSC)
AC_SUBST(CSC_EXEFLAG)
AC_SUBST(CSC_LIBFLAG)
AC_SUBST(CSC_WINEXEFLAG)
AC_SUBST(CSCFLAGS)
AC_SUBST(libdir)
AC_SUBST(webdir)
AC_SUBST(webbindir)

AC_OUTPUT([
  Makefile 
  src/Makefile
  src/nautilus-ifolder.h
  src/nautilus-ifolder
  package/Makefile
  package/nautilus-ifolder.spec
])

